feat(lang-textmate): compatible with API 21 & remove useless class