@@ -17,6 +17,7 @@
 package org.eclipse.tm4e.core.internal.oniguruma;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.Nullable;
 
@@ -29,7 +30,7 @@ final class OnigSearcher {
 	private final List<OnigRegExp> regExps;
 
 	OnigSearcher(final List<String> regExps) {
-		this.regExps = regExps.stream().map(OnigRegExp::new).toList();
+		this.regExps = regExps.stream().map(OnigRegExp::new).collect(Collectors.toList());
 	}
 
 	@Nullable
